Faced a lot of issues on getting it actually work after building

--- a/app.json
+++ b/app.json
@@ -4,12 +4,12 @@
     "slug": "widgetcraft",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/logo.png",
     "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#6751A4"
+      "backgroundColor": "#000000"
     },
     "ios": {
       "supportsTablet": false,
@@ -17,8 +17,8 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#6751A4"
+        "foregroundImage": "./assets/logo.png",
+        "backgroundColor": "#000000"
       },
       "package": "com.widgetcraft.app",
       "softwareKeyboardLayoutMode": "pan"
